0033603: Data Exchange, Step Import - Crash reading corrupted STEP file

Crash fixed by checking IsNull().